--- a/.github/workflows/daily-script.yml
+++ b/.github/workflows/daily-script.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Exécuter le script PowerShell
         if: env.TIMEZONE == (github.event.schedule == '30 11 * * *' && 'EDT' || 'EST')
         run: |
-          ./scripts/horraire.ps1
+          ./horraire.ps1
         shell: powershell
