--- a/.github/workflows/daily-script.yml
+++ b/.github/workflows/daily-script.yml
@@ -2,8 +2,8 @@ name: Exécuter Script PowerShell Quotidien
 
 on:
   schedule:
-    - cron: '30 11 * * *' # 7h30 Québec en EDT
-    - cron: '30 12 * * *' # 7h30 Québec en EST
+    - cron: '00 13 * * *' # 7h30 Québec en EDT
+    - cron: '30 11 * * *' # 7h30 Québec en EDT (11h30 UTC)
   workflow_dispatch: # Ajoute l'exécution manuelle
 
 jobs:
