--- a/.github/workflows/daily-script.yml
+++ b/.github/workflows/daily-script.yml
@@ -4,31 +4,18 @@ on:
   schedule:
     - cron: '15 13 * * *' # 7h30 Québec en EDT
     - cron: '30 11 * * *' # 7h30 Québec en EDT (11h30 UTC)
-  # workflow_dispatch: # Ajoute l'exécution manuelle
+  workflow_dispatch: # Ajoute l'exécution manuelle
 
 jobs:
   run-powershell:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Vérifier si c'est EDT ou EST
-        id: check-timezone
-        run: |
-          $date = Get-Date
-          $isDST = $date.IsDaylightSavingTime()
-          if ($isDST) {
-            echo "TIMEZONE=EDT" >> $env:GITHUB_ENV
-          } else {
-            echo "TIMEZONE=EST" >> $env:GITHUB_ENV
-          }
-        shell: powershell
       - name: Installer les dépendances PowerShell
-        if: env.TIMEZONE == (github.event.schedule == '30 11 * * *' && 'EDT' || 'EST')
         run: |
           Install-Module -Name ImportExcel -Force -Scope CurrentUser -ErrorAction Stop
         shell: powershell
       - name: Exécuter le script PowerShell
-        if: env.TIMEZONE == (github.event.schedule == '30 11 * * *' && 'EDT' || 'EST')
         run: |
           ./horraire.ps1
         shell: powershell
