--- a/.github/workflows/daily-script.yml
+++ b/.github/workflows/daily-script.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Exécuter le script PowerShell
         env:
           FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_ACCESS_TOKEN }}
+          FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
         run: |
           ./horraire.ps1
         shell: powershell
