--- a/.github/workflows/spordle_daily.yml
+++ b/.github/workflows/spordle_daily.yml
@@ -84,8 +84,8 @@ jobs:
         
       - name: Exécuter le script PowerShell
         env:
-          FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_ACCESS_TOKEN }}
-          FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
+          FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_TEST_ACCESS_TOKEN }}
+          FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_TEST_PAGE_ID }}
           SPORDLE_USER: ${{ secrets.SPORDLE_USER }}
           SPORDLE_PASS: ${{ secrets.SPORDLE_PASS }}
         run: |
