--- a/.github/workflows/python_spordle.yml
+++ b/.github/workflows/python_spordle.yml
@@ -52,8 +52,8 @@ jobs:
     - name: Run Spordle Facebook script
       env:
         SPORDLE_PASS: ${{ secrets.SPORDLE_PASS }}
-        FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
-        FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_ACCESS_TOKEN }}
+        FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_TEST_PAGE_ID }}
+        FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_TEST_ACCESS_TOKEN }}
         DISPLAY: :99
       run: |
         # Démarrer un serveur X virtuel pour Chrome
