--- a/.github/workflows/python_spordle.yml
+++ b/.github/workflows/python_spordle.yml
@@ -34,10 +34,10 @@ jobs:
         # Installer les dépendances pour les images
         sudo apt-get install -y libjpeg-dev zlib1g-dev
         
-    - name: Create directories
+    - name: Create temp directory
       run: |
-        mkdir -p commanditaire
         mkdir -p temp
+        # Le dossier commanditaire existe déjà dans le repo avec les images
         
     - name: Configure date for testing (if manual trigger)
       if: github.event_name == 'workflow_dispatch'
@@ -52,8 +52,8 @@ jobs:
     - name: Run Spordle Facebook script
       env:
         SPORDLE_PASS: ${{ secrets.SPORDLE_PASS }}
-        FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_TEST_PAGE_ID }}
-        FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_TEST_ACCESS_TOKEN }}
+        FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
+        FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_ACCESS_TOKEN }}
         DISPLAY: :99
       run: |
         # Démarrer un serveur X virtuel pour Chrome
